<resources>
    <string name="app_name">Healthlert</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="unirse">Unirse</string>
    <string name="resetearPass">¿Olvidaste tu contraseña?</string>
    <string name="instruccion_resetpw">Ingresa tu correo para cambiar tu contraseña</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="edad">Edad</string>
    <string name="salir_de_la_cuenta">Salir de la cuenta</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="genero">Género:</string>
    <string name="agregar_m_s_tarde">Agregar más tarde</string>
    <string name="numero_de_celular">Numero de celular</string>
    <string name="curp">CURP</string>
    <string name="seguir">Seguir</string>
    <string name="cuentanos_m_s">Informacion básica.</string>
    <string name="permitenos_conocerte">Permitenos conocerte.</string>
    <string name="elegir_foto">Abrir Galeria</string>
    <string name="subir_foto">Subir foto</string>
    <string name="tu_salud">Tu salud:</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="salud">Salud</string>
    <string name="encuentrame">Ubicacion</string>
    <string name="configuracione">Configuracion</string>
    <string name="salir">Salir</string>
    <string name="contacto">Contacto.</string>
    <string name="agendar_medicamento">Agendar medicamento</string>
    <string name="por_alarma">por alarma.</string>
    <string name="durante">Durante:</string>
    <string name="cada">Cada:</string>
    <string name="empezando_el">Empezando el:</string>
    <string name="a_las">A las:</string>
    <string name="agendar">Agendar</string>
    <string name="informacion_basica">Informacion basica</string>
    <string name="continuar">Continuar</string>
    <string name="finalizar">Finalizar</string>
    <string name="Contacto">contacto</string>
    <string name="salud_avanzada">Salud avanzada</string>
    <string name="tiene_seguro">¿Tiene seguro?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="tiene_alergias">¿Tiene alergias?</string>
    <string name="Si">si</string>
    <string name="No">No</string>
    <string name="tiene_padecimientos">¿Tiene padecimientos?</string>
    <string name="Si_">Si</string>
    <string name="No_">No</string>
    <string name="registrar">Registrar</string>
    <string name="salud_basica">Salud basica</string>
    <string name="Edad">Edad</string>
    <string name="Continuar">Continuar</string>
    <string name="healthert">Healthert</string>
    <string name="enviar_correo">Enviar correo</string>
    <string name="unete_a_nuestro_servicio">Unete a nuestro servicio.</string>
    <string name="vincula_tu_smartwatch">Vincula tu smartwatch</string>
    <string name="para_poder_recibir_los_datos_de_tu_paciente_se_necesita_tener_un_smartwatch_vinculado_con_el_escribe_el_siguiente_codigo_en_tu_aplicacion_del_smartwatch">Para poder recibir los datos de tu paciente, se necesita tener un smartwatch vinculado con el, escribe el siguiente codigo en tu aplicacion del smartwatch:</string>
    <string name="abcdef">ABCDEF</string>
    <string name="nombre_del_paciente">Nombre del paciente</string>
    <string name="bpm">BPM:</string>
    <string name="oscar_david_gonzalez_avila">Oscar David Gonzalez Avila</string>
    <string name="goao020425hmnnvsa9">GOAO020425HMNNVSA9</string>
    <string name="_190cm">190cm</string>
    <string name="_90kg">90kg</string>
    <string name="_21_a_os">21 años</string>
    <string name="padece_de">Padece de:</string>
    <string name="hipertensi_n_hipertiroidismo_vias_respiratorias">Hipertensión, hipertiroidismo, vias respiratorias.</string>
    <string name="alergico_a">Alergico a:</string>
    <string name="polvo_humo_fluoxetina">Polvo, humo, fluoxetina.</string>
    <string name="tratamientos">Tratamientos</string>
    <string name="paracetamol_250mg">Paracetamol 250mg</string>
    <string name="_1_pastilla_cada_8_horas">1 pastilla cada 8 horas</string>
    <string name="fecha_de_inicio_fecha_final">Fecha de Inicio Fecha Final</string>
    <string name="nombre_usuario">Nombre usuario</string>
    <string name="ajustes_de_usuario">Ajustes de usuario</string>
    <string name="preferencias">Preferencias</string>
    <string name="salir_del_perfil">Salir del perfil</string>

    <string-array name="sexosStrings">
        <item>Masculino</item>
        <item>Femenino</item>
        <item>Prefiero no especificar</item>
    </string-array>
    <string-array name="gruposSanguineosStrings">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
</resources>